--- a/pom.xml
+++ b/pom.xml
@@ -2,6 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.yuzhong</groupId>
   <artifactId>jsouphtml</artifactId>
+   <!-- <packaging>war</packaging>-->
   <version>0.0.1-SNAPSHOT</version>
     <properties>
 		<java.version>1.6</java.version>
@@ -43,5 +44,11 @@
             <artifactId>jsoup</artifactId>
             <version>1.7.3</version>
         </dependency>
+        <dependency>
+            <groupId>net.sourceforge.htmlunit</groupId>
+            <artifactId>htmlunit</artifactId>
+            <version>2.15</version>
+        </dependency>
+
     </dependencies>
 </project>
